--- a/config.yaml
+++ b/config.yaml
@@ -30,16 +30,49 @@ static_resources:
                   - name: envoy.filters.http.my_cache_filter
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.my_cache.v3.MyCacheConfig
-                      message: "Mrdka vyjebanaaaa"
+                      buffer_size: 10
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
-
+    - address:
+        socket_address:
+          address: 0.0.0.0
+          port_value: 10001
+      filter_chains:
+        - filters:
+          - name: envoy.filters.network.http_connection_manager
+            typed_config: 
+              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
+              stat_prefix: http_proxy
+              route_config: 
+                name: all
+                virtual_hosts:
+                  - name: allbackend_cluster
+                    domains: 
+                      - '*'
+                    routes:
+                      - match: { prefix: "/app1"}
+                        route:
+                          cluster: app1_cluster
+                      - match: { prefix: "/app2"}
+                        route:
+                          cluster: app2_cluster
+                      - match: { prefix: "/"}
+                        route:
+                          cluster: allbackend_cluster
+              http_filters:
+                  - name: envoy.filters.http.my_cache_filter
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.filters.http.my_cache.v3.MyCacheConfig
+                      buffer_size: 10
+                  - name: envoy.filters.http.router
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
     - name: allbackend_cluster
       connect_timeout: 1s
       type: strict_dns
-      lb_policy: round_robin
+      lb_policy: round_robin 
       load_assignment:
         cluster_name: allbackend_cluster
         endpoints:
